--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "antd": "^5.22.6",
     "axios": "^1.7.9",
+    "debounce": "^2.2.0",
+    "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-data-table-component": "^7.6.2",
     "react-dom": "^18.3.1",
